--- a/package.json
+++ b/package.json
@@ -3,13 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@heroicons/react": "^1.0.2",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
+    "@ramonak/react-progress-bar": "^3.1.0",
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.2",
+    "react-animated-css": "^1.2.1",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-items-carousel": "^2.8.0",
+    "react-leaf-carousel": "^2.0.3",
+    "react-multi-carousel": "^2.6.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "react-scroll": "^1.8.2",
+    "react-slick": "^0.28.1",
+    "react-sweet-progress": "^1.1.2",
+    "react-tsparticles": "^1.31.2",
+    "react-typing-effect": "^2.0.5",
+    "slick-carousel": "^1.8.1",
+    "web-vitals": "^1.1.2",
+    "wow.js": "^1.2.2",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
