--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
+    "jquery-particles": "^1.31.2",
     "react": "^17.0.2",
     "react-animated-css": "^1.2.1",
     "react-bootstrap": "^1.6.1",
