--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "jquery-particles": "^1.31.2",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-animated-css": "^1.2.1",
     "react-bootstrap": "^1.6.1",
